# mjstr

./: .gitmodules  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build-and-test-linux.yml  build-and-test-windows.yml  build-and-test.yml
benchmarks/: CMakeLists.txt
benchmarks/src/conversion/: benchmark.cpp
src/: CMakeLists.txt
src/mjstr/: api.hpp  char_traits.cpp  char_traits.hpp  conversion.cpp  conversion.hpp  string.cpp  string.hpp  string_iterator.cpp  string_iterator.hpp  string_view.cpp  string_view.hpp  version.hpp
src/mjstr/impl/: char_traits.hpp  conversion.hpp  dllmain.cpp  main.cpp  string.hpp  tinywin.hpp  utils.hpp
src/mjstr/res/: mjstr.rc
tests/: CMakeLists.txt
tests/src/: main.cpp
tests/src/char_traits/: test.cpp
tests/src/conversion/: test.cpp
tests/src/string/: test.cpp
tests/src/string_iterator/: test.cpp
tests/src/string_view/: test.cpp
tests/src/string_view_iterator/: test.cpp
tests/src/unit/: conversion.hpp  string.hpp  string_iterator.hpp  string_view.hpp  string_view_iterator.hpp
